manifests/basepolicies.yaml
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: security.quarantine
spec:
  egress:
  - action: Deny
    destination: {}
    source: {}
  order: 0
  selector: sec == "quarantine"
  tier: security
  types:
  - Egress

---

apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: platform.allow-dns
  namespace: kube-system
spec:
  egress:
  - action: Allow
    destination:
      ports:
      - 53
    protocol: UDP
    source: {}
  - action: Allow
    destination:
      ports:
      - 53
    protocol: TCP
    source: {}
  ingress:
  - action: Allow
    destination:
      ports:
      - 53
    protocol: UDP
    source:
      namespaceSelector: all()
      selector: all()
  - action: Allow
    destination:
      ports:
      - 53
    protocol: UDP
    source:
      namespaceSelector: global()
      selector: role == "k8snode"
  - action: Allow
    destination:
      ports:
      - 53
    protocol: TCP
    source:
      namespaceSelector: all()
      selector: all()
  - action: Allow
    destination:
      ports:
      - 53
    protocol: TCP
    source:
      namespaceSelector: global()
      selector: role == "k8snode"
  order: -100
  selector: k8s-app == "kube-dns"
  tier: platform
  types:
  - Ingress
  - Egress
