manifests/openall.yaml
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: security.openall
spec:
  egress:
  - action: Allow
  ingress:
  - action: Allow
  order: 1
  selector: all()
  tier: security
  types:
  - Egress
  - Ingress
